--- a/portfolio.html
+++ b/portfolio.html
@@ -8,13 +8,17 @@
       href="https://fonts.googleapis.com/css?family=Raleway:700|Roboto:400,500,700,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/portfolio.css" />
   </head>
   <body>
     <!-- Хедер -->
     <header>
-      <nav>
+      <nav class="conteiner">
         <a href="" class="logo">Web <span class="logo-studio">Studio</span></a>
         <ul class="site-nav">
           <li><a href="./index.html" class="link">Студия</a></li>
@@ -40,7 +44,7 @@
     </header>
 
     <!-- main section -->
-    <main>
+    <main class="conteiner">
       <ul class="service-list">
         <li><button>Все</button></li>
         <li><button>Веб-сайты</button></li>
@@ -56,6 +60,7 @@
               alt="фото сайта"
               width="380"
               height="295"
+              class="image"
             />
             <h2 class="title">Технокряк</h2>
             <p class="type">Веб-сайт</p>
@@ -73,6 +78,7 @@
               alt="спортивные команды"
               width="380"
               height="295"
+              class="image"
             />
             <h2 class="title">Постер New Orlean vs Golden Stars</h2>
             <p class="type">Дизайн</p>
@@ -89,6 +95,7 @@
               alt="постер ресторана"
               width="380"
               height="295"
+              class="image"
             />
             <h2 class="title">Ресторан Seafood</h2>
             <p class="type">Приложение</p>
@@ -105,6 +112,7 @@
               alt="изображение наушников"
               width="380"
               height="295"
+              class="image"
             />
             <h2 class="title">Проект Prime</h2>
             <p class="type">Маркетинг</p>
@@ -121,6 +129,7 @@
               alt="изображение коробок"
               width="380"
               height="295"
+              class="image"
             />
             <h2 class="title">Проект Boxes</h2>
             <p class="type">Приложение</p>
@@ -137,6 +146,7 @@
               alt="изображение монитора"
               width="380"
               height="295"
+              class="image"
             />
             <h2 class="title">Inspiration has no Borders</h2>
             <p class="type">Веб-сайт</p>
@@ -153,6 +163,7 @@
               alt="изображение журнала"
               width="380"
               height="295"
+              class="image"
             />
             <h2 class="title">Издание Limited Edition</h2>
             <p class="type">Дизайн</p>
@@ -169,6 +180,7 @@
               alt="изображение этикетки"
               width="380"
               height="295"
+              class="image"
             />
             <h2 class="title">Проект LAB</h2>
             <p class="type">Маркетинг</p>
@@ -185,6 +197,7 @@
               alt="изображение ноутбука"
               width="380"
               height="295"
+              class="image"
             />
             <h2 class="title">Growing Business</h2>
             <p class="type">Приложение</p>
@@ -198,7 +211,7 @@
     </main>
 
     <!-- Футер -->
-    <footer>
+    <footer class="conteiner">
       <div>
         <a href="" class="logo"
           >Web <span class="logo-studio-footer">Studio</span></a
