--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:700|Roboto:400,500,700,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <!-- Хедер -->
     <header>
-      <nav>
+      <nav class="conteiner">
         <a href="" class="logo">Web <span class="logo-studio">Studio</span></a>
         <ul class="site-nav">
           <li><a href="./index.html" class="link">Студия</a></li>
@@ -45,266 +46,231 @@
 
       <!-- Преимущества компании -->
       <section class="section">
-        <h2 class="section-title">Преимущества компании</h2>
-        <ul class="feature-list">
-          <li>
-            <img src="./images/antenna_black.svg" alt="изображение антенны" class="icon" />
-            <h3 class="title">Внимание к деталям</h3>
-            <p class="text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <img src="./images/clock.svg" alt="изображение часов" class="icon" />
-            <h3 class="title">Пунктуальность</h3>
-            <p class="text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <img src="./images/diagram.svg" alt="изображение диаграммы" class="icon" />
-            <h3 class="title">Планирование</h3>
-            <p class="text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <img src="./images/astronaut.svg" alt="изображение астронавта" class="icon" />
-            <h3 class="title">Современные технологии</h3>
-            <p class="text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="conteiner">
+                  <h2 class="section-title">Преимущества компании</h2>
+                  <ul class="feature-list">
+                    <li>
+                      <img src="./images/antenna_black.svg" alt="изображение антенны" class="icon" />
+                      <h3 class="title">Внимание к деталям</h3>
+                      <p class="text">
+                        Идейные соображения, а также начало повседневной работы по
+                        формированию позиции.
+                      </p>
+                    </li>
+                    <li>
+                      <img src="./images/clock.svg" alt="изображение часов" class="icon" />
+                      <h3 class="title">Пунктуальность</h3>
+                      <p class="text">
+                        Задача организации, в особенности же рамки и место обучения кадров
+                        влечет за собой.
+                      </p>
+                    </li>
+                    <li>
+                      <img src="./images/diagram.svg" alt="изображение диаграммы" class="icon" />
+                      <h3 class="title">Планирование</h3>
+                      <p class="text">
+                        Равным образом консультация с широким активом в значительной
+                        степени обуславливает.
+                      </p>
+                    </li>
+                    <li>
+                      <img src="./images/astronaut.svg" alt="изображение астронавта" class="icon" />
+                      <h3 class="title">Современные технологии</h3>
+                      <p class="text">
+                        Значимость этих проблем настолько очевидна, что реализация
+                        плановых заданий.
+                      </p>
+                    </li>
+                  </ul>
+
+        </div>
       </section>
 
       <!-- Услуги компании -->
       <section class="section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="service-list">
-          <li>
-            <img
-              src="./images/computer.jpg"
-              alt="Изображение ноутбука"
-              width="380"
-              height="300"
-            />
-            <a href="">
-              <h3 class="service-title">Десктопные приложения</h3>
-            </a>
-          </li>
-          <li>
-            <img
-              src="./images/phone.jpg"
-              alt="Изображение смартфона"
-              width="380"
-              height="300"
-            />
-            <a href="">
-              <h3 class="service-title">Мобильные приложения</h3>
-            </a>
-          </li>
-          <li>
-            <img
-              src="./images/display.jpg"
-              alt="Изображение дисплея"
-              width="380"
-              height="300"
-            />
-            <a href="">
-              <h3 class="service-title">Дизайнерские решения</h3>
-            </a>
-          </li>
-        </ul>
+        <div class="conteiner">
+                  <h2 class="section-title">Чем мы занимаемся</h2>
+                  <ul class="service-list">
+                    <li>
+                      <img src="./images/computer.jpg" alt="Изображение ноутбука" width="380" height="300" />
+                      <a href="">
+                        <h3 class="service-title">Десктопные приложения</h3>
+                      </a>
+                    </li>
+                    <li>
+                      <img src="./images/phone.jpg" alt="Изображение смартфона" width="380" height="300" />
+                      <a href="">
+                        <h3 class="service-title">Мобильные приложения</h3>
+                      </a>
+                    </li>
+                    <li>
+                      <img src="./images/display.jpg" alt="Изображение дисплея" width="380" height="300" />
+                      <a href="">
+                        <h3 class="service-title">Дизайнерские решения</h3>
+                      </a>
+                    </li>
+                  </ul>
+
+        </div>
       </section>
 
       <!-- Команда -->
       <section class="section">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list">
-          <li>
-            <a href="">
-              <img
-                src="./images/smith.jpg"
-                alt="фотография члена команды"
-                width="280"
-                height="260"
-              />
-              <h3 class="team-title">John Smith</h3>
-            </a>
-            <p class="text">Product Designer</p>
-            <ul class="social-list">
-              <li>
-                <a href="" class="social-icon">
-                  <img src="./images/instagram.svg" alt="логотип инстаграм" />
-                </a>
-              </li>
-              <li>
-                <a href="" class="social-icon">
-                  <img src="./images/twitter.svg" alt="логотип твиттер" />
-                </a>
-              </li>
-              <li>
-                <a href="" class="social-icon">
-                  <img src="./images/facebook.svg" alt="логотип фейсбук" />
-                </a>
-              </li>
-              <li>
-                <a href="" class="social-icon">
-                  <img src="./images/linkedin.svg" alt="логотип линкедин" />
-                </a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/stewart.jpg"
-                alt="фотография члена команды"
-                width="280"
-                height="260"
-              />
-              <h3 class="team-title">Marta Stewart</h3>
-            </a>
-            <p class="text">Frontend Developer</p>
-            <ul class="social-list">
-              <li>
-                <a href="" class="social-icon">
-                  <img src="./images/instagram.svg" alt="логотип инстаграм" />
-                </a>
-              </li>
-              <li>
-                <a href="" class="social-icon">
-                  <img src="./images/twitter.svg" alt="логотип твиттер" />
-                </a>
-              </li>
-              <li>
-                <a href="" class="social-icon">
-                  <img src="./images/facebook.svg" alt="логотип фейсбук" />
-                </a>
-              </li>
-              <li>
-                <a href="" class="social-icon">
-                  <img src="./images/linkedin.svg" alt="логотип линкедин" />
-                </a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/jakis.jpg"
-                alt="фотография члена команды"
-                width="280"
-                height="260"
-              />
-              <h3 class="team-title">Robert Jakis</h3>
-            </a>
-            <p class="text">Marketing</p>
-            <ul class="social-list">
-              <li>
-                <a href="" class="social-icon">
-                  <img src="./images/instagram.svg" alt="логотип инстаграм" />
-                </a>
-              </li>
-              <li>
-                <a href="" class="social-icon">
-                  <img src="./images/twitter.svg" alt="логотип твиттер" />
-                </a>
-              </li>
-              <li>
-                <a href="" class="social-icon">
-                  <img src="./images/facebook.svg" alt="логотип фейсбук" />
-                </a>
-              </li>
-              <li>
-                <a href="" class="social-icon">
-                  <img src="./images/linkedin.svg" alt="логотип линкедин" />
-                </a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/doe.jpg"
-                alt="фотография члена команды"
-                width="280"
-                height="260"
-              />
-              <h3 class="team-title">Martin Doe</h3>
-            </a>
-            <p class="text">UI Designer</p>
-            <ul class="social-list">
-              <li>
-                <a href="" class="social-icon">
-                  <img src="./images/instagram.svg" alt="логотип инстаграм" />
-                </a>
-              </li>
-              <li>
-                <a href="" class="social-icon">
-                  <img src="./images/twitter.svg" alt="логотип твиттер" />
-                </a>
-              </li>
-              <li>
-                <a href="" class="social-icon">
-                  <img src="./images/facebook.svg" alt="логотип фейсбук" />
-                </a>
-              </li>
-              <li>
-                <a href="" class="social-icon">
-                  <img src="./images/linkedin.svg" alt="логотип линкедин" />
-                </a>
-              </li>
-            </ul>
-          </li>
-        </ul>
+        <div class="conteiner">
+                  <h2 class="section-title">Наша команда</h2>
+                  <ul class="team-list">
+                    <li>
+                      <a href="">
+                        <img src="./images/smith.jpg" alt="фотография члена команды" width="280" height="260" />
+                        <h3 class="team-title">John Smith</h3>
+                      </a>
+                      <p class="text">Product Designer</p>
+                      <ul class="social-list">
+                        <li>
+                          <a href="" class="social-icon">
+                            <img src="./images/instagram.svg" alt="логотип инстаграм" />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="" class="social-icon">
+                            <img src="./images/twitter.svg" alt="логотип твиттер" />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="" class="social-icon">
+                            <img src="./images/facebook.svg" alt="логотип фейсбук" />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="" class="social-icon">
+                            <img src="./images/linkedin.svg" alt="логотип линкедин" />
+                          </a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a href="">
+                        <img src="./images/stewart.jpg" alt="фотография члена команды" width="280" height="260" />
+                        <h3 class="team-title">Marta Stewart</h3>
+                      </a>
+                      <p class="text">Frontend Developer</p>
+                      <ul class="social-list">
+                        <li>
+                          <a href="" class="social-icon">
+                            <img src="./images/instagram.svg" alt="логотип инстаграм" />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="" class="social-icon">
+                            <img src="./images/twitter.svg" alt="логотип твиттер" />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="" class="social-icon">
+                            <img src="./images/facebook.svg" alt="логотип фейсбук" />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="" class="social-icon">
+                            <img src="./images/linkedin.svg" alt="логотип линкедин" />
+                          </a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a href="">
+                        <img src="./images/jakis.jpg" alt="фотография члена команды" width="280" height="260" />
+                        <h3 class="team-title">Robert Jakis</h3>
+                      </a>
+                      <p class="text">Marketing</p>
+                      <ul class="social-list">
+                        <li>
+                          <a href="" class="social-icon">
+                            <img src="./images/instagram.svg" alt="логотип инстаграм" />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="" class="social-icon">
+                            <img src="./images/twitter.svg" alt="логотип твиттер" />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="" class="social-icon">
+                            <img src="./images/facebook.svg" alt="логотип фейсбук" />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="" class="social-icon">
+                            <img src="./images/linkedin.svg" alt="логотип линкедин" />
+                          </a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a href="">
+                        <img src="./images/doe.jpg" alt="фотография члена команды" width="280" height="260" />
+                        <h3 class="team-title">Martin Doe</h3>
+                      </a>
+                      <p class="text">UI Designer</p>
+                      <ul class="social-list">
+                        <li>
+                          <a href="" class="social-icon">
+                            <img src="./images/instagram.svg" alt="логотип инстаграм" />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="" class="social-icon">
+                            <img src="./images/twitter.svg" alt="логотип твиттер" />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="" class="social-icon">
+                            <img src="./images/facebook.svg" alt="логотип фейсбук" />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="" class="social-icon">
+                            <img src="./images/linkedin.svg" alt="логотип линкедин" />
+                          </a>
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+
+        </div>
       </section>
 
       <!-- Клиенты компании -->
       <section class="section">
-        <h2 class="section-title">Постоянные клиенты</h2>
-        <ul class="client-list">
-          <li>
-            <a href=""
-              ><img src="./images/logo1.png" alt="логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/logo2.png" alt="логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/logo3.png" alt="логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/logo4.png" alt="логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/logo5.png" alt="логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/logo6.png" alt="логотип компании"
-            /></a>
-          </li>
-        </ul>
+        <div class="conteiner">
+                  <h2 class="section-title clients">Постоянные клиенты</h2>
+                  <ul class="client-list">
+                    <li>
+                      <a href=""><img src="./images/logo1.png" alt="логотип компании" /></a>
+                    </li>
+                    <li>
+                      <a href=""><img src="./images/logo2.png" alt="логотип компании" /></a>
+                    </li>
+                    <li>
+                      <a href=""><img src="./images/logo3.png" alt="логотип компании" /></a>
+                    </li>
+                    <li>
+                      <a href=""><img src="./images/logo4.png" alt="логотип компании" /></a>
+                    </li>
+                    <li>
+                      <a href=""><img src="./images/logo5.png" alt="логотип компании" /></a>
+                    </li>
+                    <li>
+                      <a href=""><img src="./images/logo6.png" alt="логотип компании" /></a>
+                    </li>
+                  </ul>
+
+        </div>
       </section>
     </main>
 
     <!-- Футер -->
-    <footer>
+    <footer class="conteiner">
       <div>
         <a href="" class="logo">Web <span class="logo-studio-footer">Studio</span></a>
         <address class="address">
